Menu collapse break-point Increased based on new T O W E R logo size. Increasing prevents the Accounts menu from breaking to a new line

--- a/awx/ui/static/ansible-bootstrap/variables.less
+++ b/awx/ui/static/ansible-bootstrap/variables.less
@@ -296,7 +296,7 @@
 @grid-gutter-width:         30px;
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
-@grid-float-breakpoint:    1075px;  //CLH 6/24/14 - cause main navbar menu to collapse here and hopefully
+@grid-float-breakpoint:    1082px;  //CLH 6/24/14 - cause main navbar menu to collapse here and hopefully
                                     // not show multi-line main menu
 //** Point at which the navbar begins collapsing.
 @grid-float-breakpoint-max: (@grid-float-breakpoint - 1);
